--- a/css/Account/Account_mao_coin.css
+++ b/css/Account/Account_mao_coin.css
@@ -1,3 +1,5 @@
+@media only screen and (min-width: 1128px) {
+
 .container-full{
     display: flex;
     width: 80%;
@@ -158,4 +160,12 @@
     opacity: 0.9;
     left: 53%;
     
+}
+.l_mao_coin_title_mobile,
+.l_expiry_return span,
+.l_coin_line_mobile{
+    display: none;
+}
+
+
 }
