--- a/css/Account/Account_my_accountt_mobile.css
+++ b/css/Account/Account_my_accountt_mobile.css
@@ -1,64 +1,173 @@
-@media only screen and (min-width: 1128px){
+@media (min-width: 375px)and (max-width: 1127px) {
+
+/* 手機訂單user 切換頁 */
+.l_black{
+    width: 100%;
+    height: 100%;
+    background-color: #707070;
+    /* border: 1px red solid; */
+   
+    z-index: 44;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    opacity: 0.6;
+    position: fixed
+
+}
+.l_user_mobile{
+    width: 233px;
+    height: 300px;
+   background-color: #F7F4EE;
     
-.container-full{
+   position: fixed;
+    z-index: 55;
     display: flex;
-    width: 80%;
+    flex-direction: column;
+    align-items: center;
+    /* left: 130px; */
+    top: 70px;
+    right: 15px;
+    border-radius: 10px;
+}
+.l_user_order a{
+    font-size: 18px;
+    color: #89A7C2;
+    text-decoration: none;
+}
+.l_user_order li{
+    margin-top: 10px;
+}
+.l_user_mobile .l_photo_name{
+    display: flex;
+    margin: 30px 0 20px;
+}
+.l_user_mobile .l_member_photo{
+    width: 50px ;
+    height: 50px;
+    background-color: #89A7C2;
+    border-radius: 50px;
+}
+.l_user_mobile .l_member_name{
+    font-size: 18px;
+    color: #89A7C2;
+    margin-left: 10px;
+    line-height: 50px;
+}
+
+
+
+
+
+
+
+
+body{
+        background-color: #F7F4EE;
+    }
+.container-full{
     margin: 0 auto;
-    /* border: 1px solid red; */
-    justify-content: space-between;
-    margin-top: 150px;
-
-}
-.l_main_right{
-    width: 1000px;
-    /* border: 1px solid red; */
-    margin-right: 50px;
-    margin-bottom: 100px;
-    
+   
+    width: 100%;
 
 }
 
 
-.l_my_account_title,
-.l_change_password_title{
+.l_my_account_title_mobile,
+.l_change_password_title_mobile{
     text-align: center;
     margin-bottom: 20px;
   
     
 }
-h3{
-    font-size: 18px;
+.l_my_account_box h3,
+.l_my_account_box h4{
+    width: 50%;
+    height: 60px;
+    font-size: 12px;
     letter-spacing: 2px;
     color: #707070;
-    margin-bottom: 100px;
+  line-height: 20px;
     text-align: center;
-    font-weight: 300;
+    margin: 0 auto  ;
+   
+}
+.l_change_password_box h3{
+    display: none;
+}
+.l_account_togglebar_mobile{
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-evenly;
+   align-items: center;
+   
+}
+
+.l_account_togglebar_mobile li{ 
+    list-style: none;
+
+   
+    
+}
+.l_account_togglebar_mobile a{ text-decoration: none;
+    font-size: 16px;
+    
+    color: #89A7C2;
+}
+.l_yellow_line{
+    width: 75px ;
+    height: 3px;
+    background-color: #F9DD83;
+   
+    transform: translateY(-10px) translateX(77px);
+    transition: .5s;
 }
 .l_photo_box{
-    width: 50%;
-    margin: 0 auto 80px;
+ width: 85%;
+    margin: 80px auto 50px;
     display: flex;
     /* border: 1px solid red; */
 }
 .l_my_photo{
-    width: 100px ;
-    height: 100px;
+   
+    width: 80px ;
+    height: 80px;
     background-color: #89A7C2;
     border-radius: 50px;
     
 }
-.l_change_photo{
+.l_change_photo_mobile{
+   
     margin-top: 20px;
     margin-left: 10px;
 }
+.l_change_photo_mobile svg{
+    width: 90%;
+}
 .l_account_input{
-    width: 55%;
+    width: 80%;
      /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     margin: 0 auto 100px;
     
 }
+
+#dis{
+    flex-wrap: nowrap;
+}
+.c_donate_address .form-group{
+    width: 33% ;
+   margin-right: 0;
+
+}
+.c_donate_address .form-control{
+   
+   padding-left: 2px;
+}
+
 label{
     font-size: 18px;
     color: #707070;
@@ -69,13 +178,13 @@ label{
     width: 100%;
    
    margin: 30px auto 80px;
-   display: flex;
+   
    
   
 }
 .l_gender_selection{
   
-    margin-right: 90px;
+   
     margin-top: 10px;
 
 
@@ -101,7 +210,7 @@ label{
 }
 .c_form_name{
    
-    font-size: 18px;
+    font-size: 16px;
 }
 .form-group{
     margin-top: 20px;
@@ -140,6 +249,9 @@ label{
     border: 0;
   
 }
+
+
+
 /* 改密碼 */
 .l_change_password_box button{
     margin-top: 50px;
@@ -151,11 +263,12 @@ label{
     display: inline-block;
     text-decoration: none;
     position: relative;
-    left: 95%;
+    left: 75%;
     top: 50px;
 }
 .l_forgot_password a{
     text-decoration: none;
+    font-size: 16px;
 }
 
 /* 聯絡客服 */
@@ -214,11 +327,12 @@ label{
 }
 
 
-.l_change_password_title_mobile,
-.l_my_account_title_mobile,
-.l_account_togglebar_mobile,
-.l_change_photo_mobile,
-h4{
+.l_member_detail,
+.l_my_account_title,
+.l_change_photo,
+.l_change_password_title{
     display: none;
 }
+
+
 }
