--- a/css/Account/Account_my_favorite.css
+++ b/css/Account/Account_my_favorite.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 1128px){
 .container-full{
     display: flex;
     width: 80%;
@@ -49,6 +50,7 @@
     text-align: center;
     border-radius: 5px;
     color: #707070;
+    border: 2px solid #ccc;
 }
 .input-group-append button {
     color: #707070;
@@ -74,12 +76,18 @@
 flex-direction: row;
      
  }
- .form-control{
+ .l_search .form-control{
      width: 90%;
  }
+
+
+
+
+
  .l_my_favorite_product{
      /* border: 1px solid red; */
      margin-bottom: 50px;
+     /* height: 850px; */
  }
  .l_my_favorite_one{
      display: flex;
@@ -150,6 +158,10 @@ color: #707070;
 border-bottom: 1px solid #89A7C2;
 
  }
+
+
+
+
 
  /* 推薦商品 */
  .l_recommend {
@@ -288,32 +300,25 @@ h5 {
     display: block;
 }
 
-.l_icon_heart {
-    width: 40px;
-    height: 40px;
-    /* border: 1px solid blue; */
-    position: absolute;
-    left: 147px;
-    top: 15px;
-    /* display: none; */
 
-
+.l_nomore{
+    width: 500px;
+    height: 500px;
+    margin: -100px auto 100px;
+    /* border: 1px red solid; */
+}
+.l_nomore img{
+    width: 100%;
+    height: 100%;
 }
 
-.l_icon_heart:hover .icon_heart {
-    fill: #FF9A9A;
-    stroke: #89A7C2;
+
+
+
+
+.l_my_favorite_title_mobile,
+.l_button_mobile,
+.l_push_cart{
+    display: none;
 }
-
-.l_icon_heart svg {
-    width: 80%;
-    height: 70%;
-    fill: none;
-    stroke: #89A7C2;
-    stroke-width: 2.5px;
-    /* border: 1px solid red; */
-
-    z-index: 4;
-
-
 }
