--- a/css/Account/account_order_mobile.css
+++ b/css/Account/account_order_mobile.css
@@ -5,50 +5,76 @@
     --maingray: #CCCCCC;
     --maindarkgray: #707070;
 }
-@media only screen and (min-width: 1128px) {
+@media (min-width: 375px)and (max-width: 1127px) {
+    body {
+        background-color: #F7F4EE;
+        color: var(--maindarkgray);
+        font-family: 'Poppins', 'Noto Sans TC', sans-serif;
     
+      }
 .container-full{
     display: flex;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     /* border: 1px solid red; */
     justify-content: space-between;
-    margin-top: 150px;
+    margin-top: 130px;
 
 }
 .l_main_right{
-    width: 1000px;
+    width: 100%;
     /* border: 1px solid red; */
     
     
 
 }
-.l_order_management_box
-{
-    margin-top: 170px;
-    
-}
-.l_order_management_title,
-.l_subscription_order_title,
-.l_walking_order_title
+
+.l_order_management_title_mobile
 {
     /* border: 1px solid red; */
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     
 } 
+
+.l_order_bar_mobile{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    background-color: #fff;
+    align-items: center;
+    justify-content: space-around;
+}
+.l_subscription_mobile,
+.l_walking_mobile{
+    color: #CCCCCC;
+}
+.l_order_bar_mobile li{
+  list-style: none;
+}
+.l_order_bar_mobile a{
+    text-decoration: none;
+    font-size: 14px;
+    color: var(--mainblue);
+
+}
+
+
 .l_order_management_program,
 .l_subscription_order_program,
 .l_walking_order_program{
+    width: 95%;
     border-bottom: 2px solid #CCCCCC;
-    margin-bottom: 100px;
+    height: 40px;
+    margin: 60px auto 30px;
+    
     
 }
 .l_order_management_program ul{
-    height: 20px;
    
     display: flex;
     justify-content: space-evenly;
+   
 
 }
 .l_order_management_program li,
@@ -60,7 +86,7 @@
 .l_subscription_order_program a,
 .l_walking_order_program a{
     text-decoration: none;
-    font-size: 22px;
+    font-size: 14px;
     color: #707070;
     
 }
@@ -83,27 +109,29 @@
 
 
 
-.l_line_box{
-    width: 820px;
-    height: 10px;
+.l_line_box_mobile{
+    width: 90%;
+    
     /* border: 1px solid red; */
-    margin: 16px  auto 15px ;
+    margin: -15px  auto  ;
+    
     
 }
-.l_bottomline,
-.l_bottomline_1,
-.l_bottomline_2{
+.l_bottomline_mobile,
+.l_bottomline_1_mobile,
+.l_bottomline_2_mobile{
    
-    width: 75px ;
-    height: 4px ;
+    width: 40px ;
+    height: 3px ;
     background-color: #FBD14B;
     margin-bottom: 15px;
-  /* transform: translateX(-2px); */
+  /* transform: translateX(120px); */
    
    
- 
-    
-    
+
+}
+.l_bottomline_1_mobile{
+    width: 55px;
 }
 
 
@@ -115,26 +143,51 @@
 body {
     background-color: #F7F4EE;
 }
+.l_order_management_detail,.l_subscription_order_detail,.l_walking_service_order{
+    width: 90%;
+    margin: 0px auto;
+}
 
 .l_order_item {
-    width: 1000px;
-    height: 50px;
+    width: 100%;
+    height: 60px;
     background-color: #F9DD83;
-    display: grid;
-    grid-template-columns: 150px 50px 460px 100px 1fr;
-    Grid-template-rows: 1fr;
-    font-size: 22px;
+    display: flex;
+    font-size: 14px;
     color: var(--maindarkgray);
-    padding: 10px;
-    font-weight: 600;
-    padding-left: 30px;
+letter-spacing: 1.2px;
+  justify-content: center;
+    flex-wrap: wrap;
+    padding: 10px 30px ;
 
+}
+.l_date{
+    /* border: 1px solid red; */
+    width: 130px;
+    height: 23px;
+   
+}
+.l_order_item .l_date{
+    /* border: 1px solid red; */
+    width: 130px;
+    height: 23px;
+    text-align: right;
+   
+}
+.l_status{
+    text-align: right;
+    width: 40px;
+}
+.l_status_return{
+    /* border: 1px solid red; */
+    width: 100px;
+   
 }
 
 .l_order_open {
     color: var(--maindarkgray);
     font-family: Poppins;
-    width: 1000px;
+    width: 100%;
     /* border: 1px solid red; */
     background-color: #fff;
     padding-top: 5px;
@@ -144,32 +197,32 @@ body {
 .l_order_ifn_title,
 .l_cancel_reason {
 
-    font-size: 22px;
+    font-size: 16px;
     text-align: center;
     font-weight: 600;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .l_order_ifn_grid {
-    font-size: 16px;
+    font-size: 14px;
     /* border: 1px solid red; */
-    width: 800px;
+    width: 90%;
     display: grid;
-    grid-template-columns: 90px 1fr 90px 1fr;
-    Grid-template-rows: 40px 40px 40px;
+    grid-template-columns: 90px 150px ;
+    Grid-template-rows: 40px 60px 40px 40px;
     margin: 40px auto;
 
 }
 
 .l_cancel_detail {
     font-size: 16px;
-    width: 800px;
+    width: 90%;
     margin: 40px auto;
 
 }
 
 .l_order_detail_line {
-    width: 900px;
+    width:90%;
     height: 3px;
     background-color: #F7F4EE;
     margin: 10px auto;
@@ -178,18 +231,16 @@ body {
 
 
 .l_order_all_jq {
-    height: 300px;
+    height: 400px;
     overflow: hidden;
 
 }
 
 .l_order_detail {
-
-    display: grid;
-    width: 850px;
-    grid-template-columns: 120px 320px 300px 1fr;
-    Grid-template-rows: 100px;
+display: flex;
+    flex-wrap: wrap;
     margin: 40px auto;
+    width: 90%;
 }
 
 
@@ -207,11 +258,14 @@ body {
 }
 
 .l_order_detail_grid {
+    width: 100%;
     /* border: 1px solid red; */
     display: grid;
-    grid-template-columns: 130px 100px;
-    Grid-template-rows: 50px 50px;
-    margin-top: 10px;
+    grid-template-columns: 100px 100px;
+    Grid-template-rows: 23px 23px;
+    margin-top: -25px;
+    padding-left: 70px;
+    
 
 }
 
@@ -221,20 +275,68 @@ body {
 }
 
 .l_order_detail_price {
-    line-height: 100px;
+    width: 100%;
+    /* border: 1px solid red; */
+    margin-top: 10px;
+text-align: center;
+   
+    
+    
 
 }
 
 .l_order_detail_name {
-    margin-top: 20px;
+    width: 60%;
+    margin-left: 10px;
+    
 }
 
 .l_order_open_bottom {
-    width: 900px;
+    width: 80%;
     /* border: 1px solid red; */
     display: flex;
-    justify-content: space-around;
-    margin: 50px auto;
+    flex-direction: column-reverse;
+    margin: 30px auto;
+    clear:both;
+    position:relative;
+}
+
+
+.l_price_grid {
+    font-size: 14px;
+     /* border: 1px solid red; */
+    width: 300px;
+    display: grid;
+    grid-template-columns: 180px 1fr;
+    Grid-template-rows: 30px 30px 30px 40px 50px;
+    
+}
+
+.l_total_price,
+.l_total_price_return {
+    font-size: 14px;
+    font-weight: 600;
+
+}
+
+.l_price_line {
+    width: 300px;
+    border-top: 2px solid var(--maingray);
+    position: relative;
+    top: -60px;
+    left: -18px;
+}
+
+
+
+.l_order_detail_total {
+
+    /* border: 1px solid rosybrown; */
+    display: flex;
+    font-size: 14px;
+    font-weight: 600;
+    justify-content: center;
+   
 }
 
 .l_order_button {
@@ -245,8 +347,7 @@ body {
     Grid-template-rows: 50px 50px 50px;
     text-align: center;
     line-height: 35px;
-    margin-top: 20px;
-    margin-right: 0px;
+   margin: 40px auto 0;
 
 }
 
@@ -272,51 +373,7 @@ body {
     cursor: context-menu !important;
 }
 
-.l_buy_again:hover,
 
-.l_return_product:hover {
-    background-color: var(--mainyellow);
-}
-
-.l_price_grid {
-    font-size: 18px;
-    /* border: 1px solid red; */
-    width: 300px;
-    display: grid;
-    grid-template-columns: 200px 1fr;
-    Grid-template-rows: 40px 40px 40px 70px 50px;
-}
-
-.l_total_price,
-.l_total_price_return {
-    font-size: 22px;
-    font-weight: 600;
-
-}
-
-.l_price_line {
-    width: 380px;
-    border-top: 2px solid var(--maingray);
-    position: relative;
-    top: -70px;
-    left: -25px;
-}
-
-.l_order_close_buttom {
-    /* border: 1px solid rosybrown; */
-
-
-}
-
-.l_order_detail_total {
-
-    /* border: 1px solid rosybrown; */
-    display: flex;
-    font-size: 22px;
-    font-weight: 600;
-    justify-content: center;
-    margin-top: 30px;
-}
 
 .l_total {
     margin-right: 10px;
@@ -349,11 +406,17 @@ body {
 }
 .l_dog_img,
 .l_cat_img{
-    /* border: 1px solid red; */
-    width: 150px ;
-    height: 200px;
-    margin-top: 60px;
     
+    width: 130px ;
+    height: 150px;
+    
+    
+}
+.l_cat_img{
+    position: absolute;
+    left: 130px;
+    top: 340px;
+
 }
 .l_dog_img img,
 .l_cat_img img{
@@ -361,9 +424,7 @@ body {
     height: 100%;
     object-fit: contain;
 }
-.l_cat_img{
-    margin-right: 50px;
-}
+
 .l_dog_img{
     transform: scaleX(-1);
 }
@@ -372,58 +433,55 @@ body {
 /* 週期訂單 */
 .l_subscription_order_program ul{
     display: flex;
+    justify-content: space-evenly;
     
 }
 .l_subscription_order_program li{
-    margin-left: 50px;
-    margin-right: 80px;
+   
 }
-.l_line_box_1{
-    width: 918px;
+.l_line_box_1_mobile{
+    width: 75%;
     height: 10px;
     /* border: 1px solid red; */
-    margin: -6px  auto 10px ;
+    margin: -14px  auto 10px ;
     
 
 }
+
 .l_Subscription_ifn_grid {
-    font-size: 16px;
-    /* border: 1px solid red; */
-    width: 800px;
-    display: flex;
+    font-size: 14px;
+    
+    width: 80%;
+
     margin: 40px auto;
-    justify-content: space-around;
 
 }
-.l_Subscription_send
-{
+.l_Subscription_send{
+    
+    border-bottom: 3px solid #F7F4EE;
     display: grid;
-    grid-template-columns: 120px  250px;
+    grid-template-columns: 100px  200px;
     Grid-template-rows: 40px 40px 40px;
+    height: 170px;
 }
 
 .l_Subscription_pay{
+    margin-top: 30px;
     display: grid;
-    grid-template-columns: 90px  180px;
+    grid-template-columns: 100px  180px;
     Grid-template-rows: 40px 40px 40px;
 }
 
 
-
-.l_bottomline_1{
-    width: 90px;
-}
-
 /* 代遛訂單 */
+
 .l_walking_order_program ul{
     display: flex;
+    justify-content: space-evenly;
 }
-.l_walking_order_program li{
-    margin-left: 50px;
-    margin-right: 80px;
-}
-.l_bottomline_2{
-    width:90px ;
+
+.l_bottomline_2_mobile{
+    width:55px ;
 }
 .l_walking_all_jq {
     height: 150px;
@@ -434,20 +492,24 @@ body {
 .l_walking_detail {
 
     /* border: 1px solid red; */
-    display: grid;
-    width: 850px;
-    grid-template-columns: 120px 100px 520px 1fr;
-    Grid-template-rows: 100px;
-    margin: 40px auto;
+    display: flex;
+    width: 90%;
+   flex-wrap: wrap;
+    margin: 10px auto ;
+   
 }
 
 .l_Walking_detail_grid {
 
     /* border: 1px solid red; */
     display: grid;
-    grid-template-columns: 50px 150px 100px 150px;
-    Grid-template-rows: 50px 50px;
+    grid-template-columns:  90px
+    100px ;
+    Grid-template-rows: 20px 20px 20px 20px 20px ;
     margin-top: 10px;
+    position: relative;
+    top: -83px ;
+    left: 110px;
 }
 
 .l_Walking_detail_grid .l_plan {
@@ -459,7 +521,7 @@ body {
 }
 
 .l_walking_service_order .l_price_grid {
-    font-size: 18px;
+    font-size: 14px;
     /* border: 1px solid red; */
     width: 300px;
     display: grid;
@@ -482,19 +544,15 @@ body {
 }
 
 
-
-
-
-.l_order_management_title_mobile,
-.l_order_bar_mobile,
-.l_line_box_mobile,
-.l_line_box_1_mobile,
-.l_line_box_2_mobile{
+.l_member_detail,
+.l_order_management_title,
+.l_line_box,
+.l_subscription_order_title,
+.l_walking_order_title,
+.l_line_box_1,
+.l_line_box_2{
     display: none;
 }
-
-
-
 
 
 
