--- a/css/Booking/booking_woof_mebile.css
+++ b/css/Booking/booking_woof_mebile.css
@@ -11,7 +11,9 @@
 
 }
 @media (min-width:100px) and (max-width: 1127px){
-  
+  .container-fluid{
+      padding: 0 0;
+  }
     .l_woof{
         width: 250px;
         height: 40px;
@@ -70,7 +72,7 @@
 
 .l_about_text{
     
-    width:90%;
+    width:85%;
     color: var(--mainblue);
     font-size: 14px;
     font-family: var(--mfont);
@@ -120,7 +122,7 @@ margin-top: 50px;
     margin: 130px auto -50px;
 }
 .bx-wrapper {
-    /* width: 1200px; */
+ width: 90%;
     height: 650px;
     margin: 100px auto;
     border-radius: 20px;
@@ -306,14 +308,12 @@ margin-top: 50px;
    
   
 }
-
-
-.button_color_mobile{
-    background-color:var(--mainyellow);
-    color: var(--mainblue);
-    fill:var(--mainblue);
-
+.l_btn_cat_mobile{
+    background-color:#F9DD83;
 }
+
+
+
 
 .hotel_btn_dog,
 .hotel_btn_cat{
@@ -321,56 +321,92 @@ margin-top: 50px;
     height: 25px;
     margin: -5px 15px 0 0px ;
 }
-.l_dog_room_mobile,
+
 .l_cat_room_mobile{
-  justify-content: space-between;
-border: var(--uborder);
-  margin: 50px auto;
+    position: relative;
+    top: -700px;
+    /* border: 1px red solid; */
+   
+   
+    
+    
+}
+
+.l_dog_room_mobile{
+   
+    opacity: 0;
+    
+}
+
+.carousel {
+    width: 100%;
+    /* border: 4px red solid; */
+    height: 700px;
 
 }
+
+.carousel-cell {
+    width: 250px;
+    height: 650px;
+    margin-right: 10px;
+    border: 1px solid #EEE;
+    border-radius: 5px;
+    counter-increment: carousel-cell;
+}
+
+
+
+
+.flickity-prev-next-button {
+    display: none;
+}
+
 .l_dog_room_1,
 .l_dog_room_2,
 .l_dog_room_3,
 .l_cat_room_1,
 .l_cat_room_2,
-.l_cat_room_3{
+.l_cat_room_3 {
     list-style: none;
-  width: 200px;
-  margin: 0;
-  border: var(--uborder);
-  
- 
-  
+    width: 200px;
+    margin: 0;
+    border: var(--uborder);
+
+
+
 }
+
 .l_dogroom_1 a,
 .l_dogroom_2 a,
 .l_dogroom_3 a,
 .l_catroom_1 a,
 .l_catroom_2 a,
-.l_catroom_3 a{
+.l_catroom_3 a {
     text-decoration: none;
-    
+
 
 }
 
 .l_dogroom_img,
-.l_catroom_img{
-border-radius: 10px;
-width: 250px;
- height: 400px;
- overflow: hidden;
- /* border: var(--uborder); */
- 
-}
-.l_dogroom_img img,
-.l_catroom_img img{
-   height: 100%;
-   width: 100%;
+.l_catroom_img {
+    border-radius: 10px;
+    width: 250px;
+    height: 400px;
+    overflow: hidden;
+    /* border: var(--uborder); */
 
-    
-  
 }
-.l_room_card{
+
+.l_dogroom_img img,
+.l_catroom_img img {
+    height: 100%;
+    width: 100%;
+
+
+
+}
+
+.l_room_card {
     width: 250px;
     height: 230px;
     margin-top: 15px;
@@ -380,23 +416,26 @@ width: 250px;
     padding: 30px 30px;
     text-align: center;
     border-radius: 10px;
-   
+
 
 }
-h1{
+
+h1 {
     font-size: 16px;
     color: var(--mainblue);
-    
+
 
 }
-h2{
+
+h2 {
     font-size: 16px;
     font-weight: 600;
     margin-top: 10px;
-    
+
 
 }
-h3{
+
+h3 {
     margin-top: 20px;
     font-size: 14px;
     text-align: left;
@@ -405,8 +444,9 @@ h3{
     line-height: 20px;
 
 }
-h4{
-  
+
+h4 {
+
     font-size: 14px;
     text-align: left;
     font-weight: 300;
@@ -415,116 +455,87 @@ h4{
 
 
 }
-* { box-sizing: border-box; }
-
-body { font-family: sans-serif; }
-
-.carousel {
-  background: #EEE;
-}
-
-.carousel-cell {
-  width: 66%;
-  height: 200px;
-  margin-right: 10px;
-  background: #8C8;
-  border-radius: 5px;
-  counter-increment: carousel-cell;
-}
-
-/* cell number */
-.carousel-cell:before {
-  display: block;
-  text-align: center;
-  content: counter(carousel-cell);
-  line-height: 200px;
-  font-size: 80px;
-  color: white;
-}
-
 
 .l_medical_title_mobile{
     text-align: center;
-    margin-top: 100px;
+    margin-top: -600px;
+    
+    
 }
 .l_medical_img{
     text-align: center;
   
     margin-bottom: 15px;
 }
-.l_medical_1:hover .l_medical_img svg {
-    transform: translatey(-20px);
-    transition: .5s;
-    fill: var(--mainyellow);
-}
-.l_medical_1:hover h5{
-    transform: translatey(-20px);
-    transition: .4s;
-}
-.l_medical_1:hover h6{
-    opacity: 1;
-    transition: .8s;
-}
+
+
+
 
 .l_medical_img svg{
-    fill:var(--mainblue);
-    width: 100px;
-    height: 80px;
+    fill:var(--mainyellow);
+    width: 80px;
+    height: 50px;
    
   
 }
 .l_medical_detail{
     margin: 100px auto 30px;
-    display: flex;
-    width: 1000px;
-    justify-content: space-around;
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+Grid-template-rows: 200px 150px ;
 }
 .l_box{
-    
-    width: 200px;
+   
+    width: 120px;
     text-align: center;
     letter-spacing: 2px;
     line-height: 25px;
+    margin: 10px auto;
 
 }
 h5{
-  font-size: 18px;
+  font-size: 14px;
   text-align: center;
   
 }
 h6{
-    font-size: 16px;
+
+ 
+    font-size: 12px;
     font-weight: 300;
-    opacity: 0;
+    opacity: 1;
 }
 
 .l_line{
     border-top:1px solid var(--mainyellow) ;
-    width: 1200px;
+    width: 80%;
     height: 10px;
     margin: 0px auto 100px;
 }
 
 .l_services{
-    width: 900px;
+    width: 90%;
     margin: 0 auto 100px;
 }
 .l_services_title{
-    font-size: 18px;
+    width: 90%;
+    font-size: 16px;
     color: var(--mainblue);
     font-weight: 600;
-    margin-bottom: 20px;
     letter-spacing: 1.5px;
+    margin: 20px auto 10px ;
 
 }
 .l_services_text{
-    font-size: 16px;
+    font-size: 14px;
     color: var(--maindarkgray);
-    font-weight: 300;
+ 
     margin-bottom: 70px;
     letter-spacing: 1px;
-    line-height: 30px;
-
+    line-height: 25px;
+    width: 90%;
+    margin: 0 auto 50px;
 }
 .l_footer_img{
     display: flex;
@@ -584,7 +595,8 @@ h6{
 .l_cat_room,
 .l_button,
 .l_btn_dog,
-.l_btn_cat{
+.l_btn_cat,
+.l_footer_img{
     display: none;
 }
 
