--- a/css/Account/Account_my_favorite_mobile.css
+++ b/css/Account/Account_my_favorite_mobile.css
@@ -159,6 +159,7 @@ border-bottom: 1px solid #89A7C2;
  .l_recommend {
     width: 100%;
     margin: 0px auto 100px;
+    border: 1px red solid;
    
     
 
