--- a/css/Account/account_main_left.css
+++ b/css/Account/account_main_left.css
@@ -273,7 +273,10 @@ body {
     margin-top: 20px;
     padding-left: 10px;
 }
-.l_user_mobile{
+.l_user_mobile,
+.l_photo_name,
+.l_member_photo,
+.l_user_order{
     display: none;
 }
 }
