--- a/css/Account/account_order.css
+++ b/css/Account/account_order.css
@@ -49,7 +49,7 @@
    
     display: flex;
     justify-content: space-evenly;
-
+  /* border: 1px solid red; */
 }
 .l_order_management_program li,
 .l_subscription_order_program li,
@@ -84,7 +84,7 @@
 
 
 .l_line_box{
-    width: 820px;
+    width: 77%;
     height: 10px;
     /* border: 1px solid red; */
     margin: 16px  auto 15px ;
@@ -378,8 +378,9 @@ body {
     margin-left: 50px;
     margin-right: 80px;
 }
-.l_line_box_1{
-    width: 918px;
+.l_line_box_1,
+.l_line_box_2{
+    width: 86%;
     height: 10px;
     /* border: 1px solid red; */
     margin: -6px  auto 10px ;
