--- a/css/Account/Account_mao_coin_mobile.css
+++ b/css/Account/Account_mao_coin_mobile.css
@@ -99,6 +99,7 @@
     margin: 80px auto 5px;
    width: 80%;
     justify-content: space-between;
+    padding-left: 0;
 }
 
 .l_mao_coin_program li{
@@ -117,6 +118,7 @@
     width: 84%;
     height: 10px;
     margin: 5px auto;
+   
    
     
 }
@@ -177,9 +179,9 @@
     margin: 0 auto;
 }
 .l_coin_rule h4{
-    width: 800px;
+    width: 90%;
     font-size: 14px;
-    line-height: 30px;
+    line-height: 35px;
     letter-spacing: 2px;
     color: #707070;
     background-color: #fff;
@@ -188,7 +190,9 @@
     position: absolute;
     top: 390px;
     opacity: 0.9;
-    left: 53%;
+    font-weight: 400;
+    left: 20px;
+    
     
 }
 .l_member_detail,
