--- a/css/Account/Account_my_accountt_mobile.css
+++ b/css/Account/Account_my_accountt_mobile.css
@@ -1,6 +1,50 @@
 @media (min-width: 375px)and (max-width: 1127px) {
 
 /* 手機訂單user 切換頁 */
+.l_g-right{
+    display: block;
+     position: relative;
+    top: 50px;
+     left: -80px;
+      z-index: 1;
+     -webkit-user-select: none;
+     user-select: none;
+}
+.l_g-right span{
+    display: block;
+    width: 28px;
+     height: 3px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #707070;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+opacity: 0;
+    transition: transform 0.7s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+                background 0.7s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+                opacity 0.5s ease;
+  
+   
+    
+}
+/* .l_g-right span:first-child {
+    opacity: 1;
+    transform: rotate(90deg) translate(-2px, -1px);
+    background: #232323;
+}
+
+
+
+.l_g-right span:nth-last-child(2) {
+    opacity: 1;
+   
+    transform: rotate(-45deg) translate(0px, 10px);
+} */
+
+
+
+ 
 .l_black{
     width: 100%;
     height: 100%;
@@ -11,36 +55,42 @@
     top: 0;
     left: 0;
     bottom: 0;
-    opacity: 0.6;
-    position: fixed
+    opacity: 0.2;
+    position: fixed;
+ 
 
 }
 .l_user_mobile{
     width: 233px;
-    height: 300px;
+    height: 100%;
    background-color: #F7F4EE;
-    
    position: fixed;
     z-index: 55;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* left: 130px; */
-    top: 70px;
-    right: 15px;
-    border-radius: 10px;
+   z-index: 9999;
+    top: 0px;
+    left:0px;
+    transform: translateX(-100%);
+    transition: .5s;
+}
+.l_user_mobile_move{
+    transform: translateX(0%);
+    transition: .5s;
 }
 .l_user_order a{
-    font-size: 18px;
+    font-size: 20px;
     color: #89A7C2;
     text-decoration: none;
 }
 .l_user_order li{
-    margin-top: 10px;
+    margin-top: 40px;
+    
 }
 .l_user_mobile .l_photo_name{
     display: flex;
-    margin: 30px 0 20px;
+    margin: 100px 0 20px;
 }
 .l_user_mobile .l_member_photo{
     width: 50px ;
@@ -92,6 +142,9 @@ body{
     margin: 0 auto  ;
    
 }
+.l_change_password_box{
+    margin-top: 70px;
+}
 .l_change_password_box h3{
     display: none;
 }
@@ -111,9 +164,14 @@ body{
    
     
 }
-.l_account_togglebar_mobile a{ text-decoration: none;
+.l_btn_password_mebile a{
+    color: #ccc;
     font-size: 16px;
-    
+    text-decoration: none;
+}
+.l_btn_account_mebile a{ 
+    text-decoration: none;
+    font-size: 16px;
     color: #89A7C2;
 }
 .l_yellow_line{
@@ -215,7 +273,9 @@ label{
 .form-group{
     margin-top: 20px;
 }
-
+.form-control::placeholder{
+    color: #ccc;
+}
 
 
 /* 地址 */
@@ -261,8 +321,25 @@ label{
     border: 0;
   
 }
-
-
+.l_add_moible .c_fast_address{
+    margin-top: 10px;
+}
+.l_add_arrow_1{
+    display: inline-block;
+    position: relative;
+    top: -78px;
+    left: 67px;
+    z-index: 8;
+    /* border: 1px solid red; */
+} 
+.l_add_arrow_2{
+    display: inline-block;
+    position: relative;
+    top: -78px;
+    left: 137px;
+    z-index: 8;
+    /* border: 1px solid red; */
+} 
 
 /* 改密碼 */
 .l_change_password_box button{
