--- a/css/Account/account_main_left.css
+++ b/css/Account/account_main_left.css
@@ -66,7 +66,9 @@ body {
 
 
 }
-.btn:hover{
+
+.l_threefloor button:hover,
+.twofloor:hover{
    
    color: #F9DD83;
 
@@ -74,9 +76,12 @@ body {
 
 
 
+
+
 /* 每一層設定 */
 .twofloor {
-    margin-left: 60px;
+    width: 110px;
+    margin-left: 50px;
     padding: 0 !important;
     margin-right: 80px;
     font-weight: normal;
@@ -92,7 +97,7 @@ body {
 .threefloor {
     margin-left: 100px;
     padding: 0 !important;
-    margin-right: 50px;
+    /* margin-right: 50px; */
     font-weight: normal;
     color: #89A7C2;
     font-size: 18px;
