--- a/css/Account/Account_my_account.css
+++ b/css/Account/Account_my_account.css
@@ -36,10 +36,11 @@ h3{
     font-weight: 300;
 }
 .l_photo_box{
-    width: 50%;
+    width: 100%;
     margin: 0 auto 80px;
     display: flex;
     /* border: 1px solid red; */
+    justify-content: center;
 }
 .l_my_photo{
     width: 100px ;
