會員加登入

--- a/css/Account/Account_my_accountt_mobile.css
+++ b/css/Account/Account_my_accountt_mobile.css
@@ -340,7 +340,12 @@ label{
     z-index: 8;
     /* border: 1px solid red; */
 } 
-
+/* 性別 */
+.form-check-input:checked{
+    background-color:var(--mainyellow);
+    border-color:var(--mainyellow);
+    
+}
 /* 改密碼 */
 .l_change_password_box button{
     margin-top: 50px;
