--- a/css/Account/Account_my_account.css
+++ b/css/Account/Account_my_account.css
@@ -98,7 +98,7 @@ label{
     color: #707070;
     outline: none;
     border: none;
-    margin: 0 auto;
+    margin: 0 auto 50px;
 
 }
 .c_form_name{
