--- a/css/Booking/booking_woof_detail_mobile.css
+++ b/css/Booking/booking_woof_detail_mobile.css
@@ -1,26 +1,33 @@
 @media (min-width:100px) and (max-width: 1127px){
-
+.container-fluid{
+    width: 100%;
+    padding: 0 0 ;
+}
 .l_singleroom_title_mobile{
-    margin-top: 200px;
+    margin-top: 120px;
     text-align: center;
 }
 
 .l_singleroom_pic{
-    width: 90%;
+    width: 100%;
     /* border: 1px solid red; */
-    margin: 100px auto ;
+    margin: 50px auto ;
     display: flex;
     justify-content: space-between;
+    border-radius: 30px;
+    overflow: hidden;
 
 }
 .l_room_pic_1{
-    width: 39%;
+    width: 40%;
     height: 300px;
+   
     
 }
 .l_room_pic_1 img{
     width: 100%;
     height:100%;
+    object-fit: cover;
     
 }
 
@@ -60,14 +67,16 @@
 
 .l_mian_detail{
     width: 100%;
-    display: flex;
+
+    /* display: flex; */
     margin: 50px auto;
     /* border: 1px solid red; */
-    justify-content: space-between;
+   
 }
 
 .l_main_right_1{
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
    
 }
 .l_subtitle{
@@ -76,7 +85,7 @@
     border-bottom: 1px solid #89A7C2;
     display: flex;
     width: 100%;
-    margin: 0 auto;
+  
     justify-content: space-evenly;
 }
 .l_subtitle a{
@@ -92,7 +101,7 @@
    font-size: 16px;
 }
 
-.l_yellow_line{
+.l_yellow_line_mobile{
     width: 80px;
     height: 3px;
     background-color: var(--mainyellow);
@@ -120,7 +129,7 @@
     font-size: 16px;
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
+   
     
 }
 .l_size_1{
@@ -147,7 +156,7 @@
 .l_main_bottom,
 .l_main_right2_bottom{
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 100px;
     
 }
 .l_main_item_2{
@@ -175,12 +184,15 @@
     /* border: 1px solid red; */
     width: 100%;
     display: flex;
-    justify-content: space-around;
+  align-items: center;
+    flex-direction: column;
+    text-align: center;
    
 }
 .l_docter_img{
     width: 160px;
     height: 160px;
+    margin: 30px auto 40px;
 }
 .l_docter_img img{
     width: 100%;
@@ -209,18 +221,23 @@
      line-height: 30px;
 }
 .l_medical_all{
-   
+   width: 90%;
+   height: 600px;
     margin: 0 auto;
      /* border: 1px solid red; */
-    display: flex;
-    justify-content: space-between;
+     display:grid;
+     grid-template-columns: 1fr 1fr ;
+     Grid-template-rows:  1fr 1fr   1fr 1fr   ;
+     text-align: center;
+    
 
 }
 .l_medical_img{
-    width: 100px;
-    height: 100px;
-    border-radius: 30px;
+    width: 90px;
+    height: 90px;
+    border-radius: 50px;
     overflow: hidden;
+    margin: 0 auto;
 }
 .l_medical_img img{
     width: 100%;
@@ -229,12 +246,10 @@
 }
 .l_medical_text{
     text-align: center;
-    font-size: 22px;
+    font-size: 16px;
+    margin-top: 5px;
 }
-.l_main_right2_bottom,
-.l_main_bottom{
-    margin-bottom: 100px;
-}
+
 
 .l_footer_img{
     display: flex;
@@ -270,16 +285,21 @@
 .l_main_left {
     border: 1px solid #ccc;
     border-radius: 10px;
-    width: 400px;
+    width:95%;
     height: 300px;
     padding-left: 1px;
     background-color: #FBF9F6;
+    padding: 20px;
+   margin: 0 auto 100px;
+    left: 0px;
+    bottom: 0;
     
 }
 
-.l_money_oneday {
+.l_main_left .l_money_oneday {
     margin: 20px 0 0 40px;
-    font-size: 22px;
+    font-size: 16
+    px;
     color: #707070;
     font-weight: 700;
     letter-spacing: 2px;
@@ -312,7 +332,7 @@
 
 .Check-in_bar,
 .Check-out_bar {
-    width: 170px;
+    width: 50%;
 
     /* border-radius: 10px; */
     /* border: 1px solid #ccc; */
@@ -329,11 +349,11 @@
 }
 
 .l_number_pet {
-    width: 340px;
-    height: 50px;
+    width: 100%;
+    height: 40px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 0 28px;
+
     outline: none;
     padding-left: 30px;
 }
@@ -342,7 +362,8 @@
 
 
 .l_next_check {
-    width: 340px;
+    width: 100%;
+
     height: 50px;
     background-color: #F9DD83;
     border-radius: 5px;
@@ -353,15 +374,58 @@
 
 .l_next_check a {
     color: #707070;
-    font-size: 18px;
+    font-size: 16px;
     letter-spacing: 2px;
     font-weight: 600;
     text-decoration: none;
 }
+.l_main_left_mobile{
+    width: 100%;
+    height: 70px;
+    background-color: #fff;
+    display: flex;
+   
+    align-items: center;
+    justify-content: space-evenly;
+    position: fixed;
+    bottom: 0;
+    
+}
+.l_immediately{
+    width: 50%;
+    height: 40px;
+    background-color: #F9DD83;
+    text-align: center;
+    border-radius: 10px;
+    line-height: 40px;
+}
+.l_main_left_mobile .l_money_oneday{
+    font-weight: 600;
+    font-size: 18px;
+}
+
+
+.move{
+    position: fixed;
+}
+
+.aaa{
+
+bottom: 0;
+}
+
+
+
+
+
+
+
+
 
 .l_singleroom_title,
 .l_footer_img,
-.l_main_left{
+.l_main_left_2,
+.l_yellow_line{
     display: none;
 }
 
